# zk-server

./: .env.example  Dockerfile  README.md
apps/: Cargo.toml
apps/src/: api.rs  ipfs_reader.rs  lib.rs  prover.rs  types.rs
apps/src/proof/: prover.rs
apps/src/tests/: mod.rs  performance_tests.rs
contracts/: AccessToken.sol
methods/guest/: Cargo.toml
methods/guest/src/: utils.rs
methods/src/: lib.rs
script/: Deploy.s.sol  config.toml
template_data/: policy.json  request.json
template_data/attr/: attr_fail.json  attr_pass.json
tests/: AccessToken.t.sol
